--- a/index.html
+++ b/index.html
@@ -7,6 +7,20 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate, nostrum.
+    <h1 class="title">Taming Diffusion Models For Audio-Driven Talking Face Gestures</h2>
+    <hr>
+    <h5 class="subtitle">Project by Group 3: Ava Cui, Ella Liu, Yanda Lu, Xinke Wang, Wentao Xie, Henry Yu, Zichang Zeng, Allen Zhang, Amie Zhang</h5>
+    <h5 class="subtitle">Mentors: Dr. Xiaohu Guo, Steven Hogue, Ningna Wang</h5>
+    <hr>
+    <div class="gridview">
+        <div class="icon"><video src="videos/whathaveidone.mp4" class="video" loop autoplay muted></video></div>
+        <div class="icon"><video src="videos/0.mp4" class="video" loop autoplay muted></video></div>
+        <div class="icon"><video src="videos/1.mp4" class="video" loop autoplay muted></video></div>
+        <div class="icon"><video src="videos/2.mp4" class="video" loop autoplay muted></video></div>
+        <div class="icon"><video src="videos/3.mp4" class="video" loop autoplay muted></video></div>
+        <div class="icon"><video src="videos/4.mp4" class="video" loop autoplay muted></video></div>
+        <div class="icon"><video src="videos/5.mp4" class="video" loop autoplay muted></video></div>
+        <div class="icon"><video src="videos/wayne0_complete.mp4" class="video" loop autoplay muted></video></div>
+    </div>
 </body>
 </html>
