--- a/index.html
+++ b/index.html
@@ -13,14 +13,23 @@
     <h5 class="subtitle">Mentors: Dr. Xiaohu Guo, Steven Hogue, Ningna Wang</h5>
     <hr>
     <div class="gridview">
-        <div class="icon"><video src="videos/whathaveidone.mp4" class="video" loop autoplay muted></video></div>
         <div class="icon"><video src="videos/0.mp4" class="video" loop autoplay muted></video></div>
         <div class="icon"><video src="videos/1.mp4" class="video" loop autoplay muted></video></div>
         <div class="icon"><video src="videos/2.mp4" class="video" loop autoplay muted></video></div>
         <div class="icon"><video src="videos/3.mp4" class="video" loop autoplay muted></video></div>
         <div class="icon"><video src="videos/4.mp4" class="video" loop autoplay muted></video></div>
         <div class="icon"><video src="videos/5.mp4" class="video" loop autoplay muted></video></div>
-        <div class="icon"><video src="videos/wayne0_complete.mp4" class="video" loop autoplay muted></video></div>
+        <div class="icon"><video src="videos/6.mp4" class="video" loop autoplay muted></video></div>
+        <div class="icon"><video src="videos/7.mp4" class="video" loop autoplay muted></video></div>
+        <div class="icon"><video src="videos/8.mp4" class="video" loop autoplay muted></video></div>
+        <div class="icon"><video src="videos/9.mp4" class="video" loop autoplay muted></video></div>
+        <div class="icon"><video src="videos/10.mp4" class="video" loop autoplay muted></video></div>
+        <div class="icon"><video src="videos/11.mp4" class="video" loop autoplay muted></video></div>
+        <div class="icon"><video src="videos/12.mp4" class="video" loop autoplay muted></video></div>
+        <div class="icon"><video src="videos/13.mp4" class="video" loop autoplay muted></video></div>
+        <div class="icon"><video src="videos/14.mp4" class="video" loop autoplay muted></video></div>
+        <div class="icon"><video src="videos/15.mp4" class="video" loop autoplay muted></video></div>
+        <div class="icon"><video src="videos/16.mp4" class="video" loop autoplay muted></video></div>
     </div>
 </body>
 </html>
