--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <h5 class="subtitle">Project by Group 3: Ava Cui, Ella Liu, Yanda Lu, Xinke Wang, Wentao Xie, Henry Yu, Zichang Zeng, Allen Zhang, Amie Zhang</h5>
     <h5 class="subtitle">Mentors: Dr. Xiaohu Guo, Steven Hogue, Ningna Wang</h5>
     <img src="group.png" class="funnygrouppicture">
+    <h6 class="subtitle">Mobile users: Click on videos to play</h6>
     <hr>
     <div class="gridview">
         <div class="icon"><video src="videos/0.mp4" class="video" loop autoplay muted></video></div>
